Corrected path to background image
This has to be relative to the css to fetch correct background image.

--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -57,7 +57,7 @@ nav {
 }
 
 #wall div.wall-image-container {
-    background: url("../images/fa-camera.png") no-repeat center;
+    background: url("images/fa-camera.png") no-repeat center;
     -webkit-box-flex: auto;
     -ms-flex: auto;
     flex: auto;
