Override margin on leaflet control layers input elements
The standard rule creates a large cap between options in list which does not look good

--- a/resources/assets/css/app_normalize.css
+++ b/resources/assets/css/app_normalize.css
@@ -24,6 +24,10 @@
     padding: 0;
 }
 
+.leaflet-control-layers-list label > input {
+    margin-bottom: 0;
+}
+
 /* Foundation overrides */
 .easy-button-button {
     padding: 0;
