Replaced the css rules moved from app_normalize earlier.
These rules are app specific and should be placed here

--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -11,6 +11,22 @@ nav {
     font-size: 20px;
 }
 
+.top-bar, ul.menu {
+    background-color: #444;
+    padding: 0;
+}
+.menu a {
+    color: #777;
+}
+
+.menu li.is-active a {
+    color: #eee;
+}
+
+.menu li:hover:not(.is-active) a {
+    color: #999;
+}
+
 #content {
     height: calc(100vh - 45px);
     width: 100vw;
